--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+main {
+  margin: 10px;
+  padding: 10px;
+  
+}
+
+h1{
+  margin: 20px;
+  padding: 20px;
+}
+
+p {
+  margin: 10px;
+  padding: 10px;
+}
